MaxPermSize increased for tests